// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 1`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 11295,
  },
  Object {
    "x": 1627322580000,
    "y": 9573.58823529412,
  },
  Object {
    "x": 1627322640000,
    "y": 19285.8571428571,
  },
  Object {
    "x": 1627322700000,
    "y": 39829.8571428571,
  },
  Object {
    "x": 1627322760000,
    "y": 12643.5714285714,
  },
  Object {
    "x": 1627322820000,
    "y": 12063,
  },
  Object {
    "x": 1627322880000,
    "y": 34031,
  },
  Object {
    "x": 1627322940000,
    "y": 29743,
  },
  Object {
    "x": 1627323000000,
    "y": 18665.6666666667,
  },
  Object {
    "x": 1627323060000,
    "y": 17345.9090909091,
  },
  Object {
    "x": 1627323120000,
    "y": 31359,
  },
  Object {
    "x": 1627323180000,
    "y": 19552.2307692308,
  },
  Object {
    "x": 1627323240000,
    "y": 14519,
  },
  Object {
    "x": 1627323300000,
    "y": 12831,
  },
  Object {
    "x": 1627323360000,
    "y": 17701.8571428571,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 2`] = `
Array [
  Object {
    "x": 1627322520000,
    "y": 809562.428571429,
  },
  Object {
    "x": 1627322580000,
    "y": 91416.6,
  },
  Object {
    "x": 1627322640000,
    "y": 25749.4,
  },
  Object {
    "x": 1627322700000,
    "y": 21631,
  },
  Object {
    "x": 1627322760000,
    "y": 20692.3333333333,
  },
  Object {
    "x": 1627322820000,
    "y": 18555,
  },
  Object {
    "x": 1627322880000,
    "y": 25204.3333333333,
  },
  Object {
    "x": 1627322940000,
    "y": 17041.2857142857,
  },
  Object {
    "x": 1627323000000,
    "y": 35904.6,
  },
  Object {
    "x": 1627323060000,
    "y": 69460.3333333333,
  },
  Object {
    "x": 1627323120000,
    "y": 14612.3333333333,
  },
  Object {
    "x": 1627323180000,
    "y": 29588.3333333333,
  },
  Object {
    "x": 1627323240000,
    "y": 15255,
  },
  Object {
    "x": 1627323300000,
    "y": 12889.6666666667,
  },
  Object {
    "x": 1627323360000,
    "y": 29513.6666666667,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded when not defined environments is seleted should return the correct anomaly boundaries 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 0,
    "y0": 0,
  },
  Object {
    "x": 1607436900000,
    "y": 0,
    "y0": 0,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded with environment selected should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1607436000000,
    "y": 136610.507897203,
    "y0": 22581.5157631454,
  },
  Object {
    "x": 1607436900000,
    "y": 136610.507897203,
    "y0": 22581.5157631454,
  },
]
`;
